nuclearbomb/namespaces/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app: jellyseerr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      nodeSelector:
        kubernetes.io/hostname: 309c23e693a5
      containers:
        - image: fallenbagel/jellyseerr:sha-42eec24 # https://hub.docker.com/r/fallenbagel/jellyseerr/tags
          name: jellyseerr
          volumeMounts:
            - name: config
              mountPath: /app/config
          ports:
            - containerPort: 5055
              protocol: TCP
          resources:
            limits:
              memory: 2048Mi
              ephemeral-storage: 1Gi
              cpu: "4"
            requests:
              cpu: 150m
              memory: 1024Mi
      volumes:
        - name: config
          nfs:
            server: 192.168.4.38
            path: /mnt/meow/jellyseerr/config
            readOnly: false
