nuclearbomb/namespaces/media/jellyseerr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "jellyseerr.hiibolt.com"
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 5055
